--- a/IndustrialAutomationSolutions.html
+++ b/IndustrialAutomationSolutions.html
@@ -92,10 +92,41 @@
 </div></pre>
                 </div>
                 <div class="container2">
-                  <div id="Rectangle1"></div>
-                  <div class="Rectangle2"></div> 
-                  <div class="Rectangle3"></div> 
-                  <div class="Rectangle4"></div>
+                  <div id="Rectangle1">
+                    <div class="hpost2">
+                    <h1>Robotic Programming</h1></div>
+                    <div class="ppost2">
+                    <p>Robotic programming<br> encompasses both online and<br> offline programming methods.<br> Online programming involves<br> real-time programming and<br> control of robots on the<br> production line, while offline<br> programming allows for the<br> development and optimization<br> of robot programs in a virtual<br> environment, reducing<br> downtime and enhancing<br> efficiency in automotive<br> manufacturing processes.
+                    </p></div>
+
+                  </div>
+                  <div class="Rectangle2">
+                    <div class="hpost3">
+                      <h1>Virtual Commissioning </h1></div>
+                      <div class="ppost3">
+                        <p>A fully integrated Virtual<br> Commissioning  process helps in<br> keeping to deadlines in<br> engineering and significantly<br> increases the quality of the<br> component, machine or plant to<br> be supplied by allowing faults to<br> be identified and remedied<br> earlier. 
+
+                          Improvements in terms of<br> timing and quality benefit both<br> the supplier and the operator.
+                          </p>
+                      </div>
+                  </div> 
+                  <div class="Rectangle3">
+                    <div class="hpost4">
+                      <h1>Plant Engineering
+                      </h1></div>
+                  </div> 
+                  <div class="ppost4">We provide a best plant layout<br> and process design which<br> helps you to reduce the cost of<br> production with improved<br> efficiency.
+
+                    Our core team has vast<br> experience in layout designing<br> and process planning which<br> surely improve your<br>production rate.
+                    
+                    </div>
+                  <div class="Rectangle4">
+                    <div class="hpost5"><h1>Layout Validation</h1>
+                    </div>
+                    <div class="ppost5"><p>At Envision-IS we steer clear of<br> one-size-fits-all solutions.<br> 
+                      We Provide custom<br> Automation solutions that are<br> designed to replace slow,<br> outdated manual production<br> systems with streamlined,<br> automated workflows, leading<br> to increased efficiency and<br> accuracy.
+                      </p></div>
+                  </div>
                     <div class="hpost1">
                     <h1>IMPLEMENTATION</h1></div>
                     <pre><div class="ppost1">
