--- a/WhoWeAre.html
+++ b/WhoWeAre.html
@@ -80,22 +80,15 @@
     </div>
     </div>
     <div class="container">
-      <div style="margin-left:0vw;margin-top:1vh;display: flex;">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture19.png" width="1903vw" height="930vh"></div>
 
-<pre><div style="color:white;margin-left:-94.8vw;margin-top:10vh;font-size:2vw;font-family:'Times New Roman', Times, serif"><h1 class="hpos1" style="margin-top:20vh">Who We Are?</h1></div></pre>
-<pre><div style="color:white;margin-top:27vh;margin-left:-93.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
-<p>Must explain to you how all this mistaken idea of denouncing pleasure<br> and praising pain was born will give you a complete account of the<br> system pain can procure him some great pleasure expound the actual<br> of the master-builder of human happiness.</p></div></pre>
-<pre><div style="color:white;margin-top:46vh;margin-left:-93.9vw;line-height:5vh;font-size:1.8vw;font-family: 'Times New Roman', Times, serif;">
-  <p>There anyone who loves or pursues or desires to obtain pain of itself,<br> because it pain but because occasionally circumstances occurs in<br> which toil and pain procures him some great pleasure take a trivial<br> example physical exercise.
-    </p></div></pre>
-    <div class="Circle-1" style="margin-left:-28.4vw;padding-top:19vh">
-        <div id="circle" style="width: 22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.2vw;border-style:solid;border-color:black; background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));"></div></div>
-        <div style="margin-top:26vh;margin-left:-15vw;font-size:10vw;color:black"><p>E</p></div>
-        <div class="Circle-2" style="margin-left:-13.2vw;padding-top:51.7vh">
-            <div id="circle" style="width:22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.2vw;border-style:solid;border-color:black; background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));"></div></div>
-            <div style="margin-top:60vh;margin-left:-15vw;font-size:10vw;color:black"><p>G</p></div>     
-
+<pre><div class="hpos1"><h1>Who We Are?</h1></div></pre>
+<pre><div class="parapos1">
+<p>Must explain to you how all this mistaken idea of denouncing pleasure<br>and praising pain was born will give you a complete account of the<br>system pain can procure him some great pleasure expound the actual<br>of the master-builder of human happiness.</p></div></pre>
+<pre><div class="parapos2">
+  <p>There anyone who loves or pursues or desires to obtain pain of itself,<br>because it pain but because occasionally circumstances occurs in<br>which toil and pain procures him some great pleasure take a trivial<br>example physical exercise.
+    </p></div></pre>     
+            <div class="circle"><p class="let">E</p></div>
+            <div class="circle2"><p class="lets">G</p></div>
           </div>
 
 <div class="container1">
@@ -280,12 +273,7 @@ dots[slideIndex-1].className += " active";
     </script>
 </div>
 <div class="container3">
-  <div class="img7">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture25.png" width="951.3vw" height="808.7vh">
-  </div>
-  <div class="img8">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture26.png" width="951.3vw" height="808.7vh">
-  </div>
+  
   <div class="ppos2">
   <p>'' Great things in bu</p></div>
   <div class="ppos3">
@@ -299,64 +287,61 @@ dots[slideIndex-1].className += " active";
   <div class="ppos7">
   <p>ple ''.</p></div>
   <div class="rd">
+    <a href="dummy1.html" style="text-decoration:none">
     <div class="ppos8">
     <p>See</p></div>
     <div class="ppos9">
-    <p>More</p></div>
+    <p>More</p></div></a>
   </div>
 </div>
 <div class="container4">
-  <div class="img9">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture40.png" width="951.3vw" height="808.7vh">
-  </div>
-  <div class="img10">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture41.png" width="951.5vw" height="808.7vh">
-  </div>
+  
   <div class="bpos">
 <b>Celebrate</b></div>
-<div class="para2"><p>what you have</p> </div>
-<div class="para3"><p>accomplished, but raise the </p> </div>
-<div class="para4"><p>bar a little higher </p> </div>
-<div class="para5"><p>when you  </p> </div>
-<div class="para6"><b>succeed.</b> </div>
-<div class="rd">
+<pre><div class="para-2"><p>what you have</p> </div></pre>
+<pre><div class="para-3"><p>accomplished, but raise the </p> </div></pre>
+<pre><div class="para-4"><p>bar a little higher </p> </div></pre>
+<pre><div class="para-5"><p>when you  </p> </div></pre>
+<div class="para-6"><b>succeed.</b> </div>
+<div class="rd1">
+  <a href="dummy1.html" style="text-decoration:none">
   <div class="ppos10">
   <p>See</p></div>
   <div class="ppos11">
-  <p>More</p></div>
+  <p>More</p></div></a>
 </div>
 </div>
 
 <div class="container9">
-  <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
-      <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
-      <div style="margin-top:-24vh;margin-left:3.85vw;font-size:5vw;color:white;margin-top:-13.2vh"><p>E</p></div>
+  <div class="Circle1">
+      <div id="circle"></div></div>
+      <div class="letE"><p>E</p></div>
 
-      <div class="Circle2" style="margin-left:1.64vw;margin-top:19.6vh">
-          <div id="circle" style="width: 7vw;height: 14vh;-webkit-border-radius:7vw;-moz-border-radius:7vw;border-radius:7vw;border-width:0.2vw;border-style:solid;border-color:black;background-color:green;"></div></div>
-          <div style="margin-top:-24vh;margin-left:3vw;font-size:5vw;color:white;margin-top:-13.4vh"><p>G</p></div>
+      <div class="Circle2">
+          <div id="circle"></div></div>
+          <div class="letG"><p>G</p></div>
 
-          <div style="margin-left:10.4vw;font-size:1.2vw;line-height:4vh;margin-top:-55.4vh">
-  <p class="para">Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
+          <div class="para-1">
+  <p>Envision Integrated Services function<br> as a full stakeholder to business,<br> offering a consulting-led approach<br> with an integrated portfolio of<br> technology that encompass the entire<br> Enterprise value chain. Our Customer-<br>centric Engagement Model defines<br> how we do engage with you, offering<br> specialized services and solutions that<br> meet the distinct needs of your<br> business.
   </p></div>
-  <div style="margin-left:39.35vw;margin-top:-43.8vh;font-size:0.7vw">
+  <div class="hpost6">
   <h1>Main Links</h1></div>
-  <div style="margin-left:55.5vw;margin-top:-3.3vh;font-size:0.7vw">
+  <div class="hpost7">
   <h1>Services</h1></div>
-  <div style="margin-left:79.3vw;margin-top:-3.5vh;font-size:0.7vw;color:white">
+  <div class="hpost8">
       <h1>Contact Us</h1></div>
 
-<pre><div style="font-weight:bold;margin-left:39.5vw;margin-top:0.1vh;font-size:1vw;line-height:2vh">
-<p><div><a href="#" style="text-decoration:none;color:black">Home</a></div>
-<div><a href="#" style="text-decoration:none;color:black">What We Do</a></div>
-<div><a href="#" style="text-decoration:none;color:black">Who We Are</a></div>
-<div><a href="#" style="text-decoration:none;color:black">Services</a></div>
-<div><a href="#" style="text-decoration:none;color:black">Insights</a></div>
+<pre><div class="links">
+<p><div><a href="home.html" style="text-decoration:none;color:black">Home</a></div>
+<div><a href="What We Do.html" style="text-decoration:none;color:black">What We Do</a></div>
+<div><a href="WhoWeAre.html" style="text-decoration:none;color:black">Who We Are</a></div>
+<div><a href="services1.html" style="text-decoration:none;color:black">Services</a></div>
+<div><a href="insights.html" style="text-decoration:none;color:black">Insights</a></div>
 <div><a href="#" style="text-decoration:none;color:black">Get In Touch</a></div>
 <div><a href="#" style="text-decoration:none;color:black">Careers</a></div>
 <div><a href="#" style="text-decoration:none;color:black">News & Events</a></div>
 </p></div></pre>
-<pre><div style="font-weight:bold;margin-left:55.5vw;margin-top:-34.1vh;font-size:1vw;line-height:2vh">
+<pre><div class="para3">
 <p>Engineering Design Solutions
 
 Industrial Automation Solutions
@@ -374,48 +359,48 @@ Contract To Contract
 Contract to Hire
 
 </p></div></pre>
-<pre><div style="font-weight:bold;margin-left:79.5vw;margin-top:-34.2vh;font-size:1vw;color:white;line-height:2vh"><p>
+<pre><div class="info"><p>
 Mobile: +91 9640 173 246
 
 Email: info@envisionis-group.com
 </p></div></pre>
-<div style="margin-left:10.45vw;margin-top:35.5vh;font-size:0.7vw">
+<div class="hpost5">
 <h1>Locations:-</h1></div>
-<div style="margin-left:10.5vw;margin-top:1.4vh;font-size:0.6vw">
+<div class="Hpos">
 <h1>Envision Group - Telangana, Hyderabad</h1></div>
-<div style="margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw">
+<div class="Mpos">
 <h1>Envision Group - Pune, Maharashtra</h1></div>
-<div style="margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw">
+<div class="Kpos">
 <h1>Envision Group - Bangalore, Karnataka</h1></div>
 
 
-<div style="margin-left:10.5vw;margin-top:1.5vh;font-size:1vw"><p>#913, Manjeera Trinity Corporate,<br> 
+<div class="HA"><p>#913, Manjeera Trinity Corporate,<br> 
 9th floor, Office No.913,<br> 
-KPHB, Hyderabad, India - 500085</p></div>
-<div style="margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw">
+KPHB, India - 500085</p></div>
+<div class="MA">
 <p>Suratwala Mark, Wakad Road,<br>
 8th floor, Office No.810,<br> 
-Opposite to KFC, Pune, India - 411057</p></div>
-<div style="margin-left:67.7vw;margin-top:-7.3vh;font-size:1vw">
-<p>#24, Gr. Piston, 2nd floor, Office No.201,<br> 
-Banashankari 3rd Stage,<br> 
-Bangalore, India - 560085</p></div>
-<div style="margin-left:10.5vw;margin-top:2vh;font-size:0.6vw">
+Opposite to KFC, India - 411057</p></div>
+<div class="KA">
+<p>1596, 20th Main Rd, Agara Village,<br> 
+1st Sector,HSR Layout,<br> 
+India - 560085</p></div>
+<div class="Tpos">
 <h1>Envision Group - Tamil Nadu, Chennai</h1></div>
-<div style="margin-left:39.9vw;margin-top:-3vh;font-size:0.6vw">
+<div class="Gpos">
 <h1>Envision GmbH - Germany, Europe</h1></div>
-<div style="margin-left:67.7vw;margin-top:-3vh;font-size:0.6vw">
+<div class="Rpos">
 <h1>Envision SRL - Romania, Europe</h1></div>
-<div style="margin-left:10.5vw;margin-top:1.3vh;font-size:1vw">
-<p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br>
-xth floor, Office No.xxx,<br>
-xxxxxxxxxxxxxxx, Chennai, India - xxxxxx</p></div>
-<div style="margin-left:39.9vw;margin-top:-7.2vh;font-size:1vw">
+<div class="TA">
+<p>13, Customs colony,<br>
+OMR, Oggiyamduraipakkam,<br>
+India - 600097</p></div>
+<div class="GA">
 <p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
 xth floor, Office No.xxx,<br>
 xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
 </p></div>
-<div style="margin-left:67.7vw;margin-top:-7.2vh;font-size:1vw">
+<div class="RA">
 <p>#xxx, xxxxxxxxxxxxxxxxxxxxxxx,<br> 
 xth floor, Office No.xxx,<br> 
 xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
@@ -431,47 +416,31 @@ xxxxxxxxxxxxxxx, Chennai, India - xxxxxx
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="footer">
-  <div class="fc">
-      <h1>&copy;</h1>
-    </div>
-  <p class="fp">2024 Envision Group. All Rights Reserved
+<div class="fc">
+    <h1>&copy;</h1>
+  </div>
+<p class="fp">2024 Envision Group. All Rights Reserved
 </p>  
 <div class="eimg">
-  <img src="EIS-logo.png" width="100%" height="85%">
+<img src="EIS-logo.png" width="100%" height="85%">
 </div>
 <div class="lin">
-  <img src="linkdin.png">
- 
+<a href="https://in.linkedin.com/" target="_blank"><img src="linkdin.png"></a>
+
 </div>
 <div class="face">
-  <img src="facebook.png">
+<a href="https://www.facebook.com/" target="_blank"> <img src="facebook.png"></a>
 </div>
 <div class="inst">
-  <img src="instagram.png" width="6.8%">
+<a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="instagram.png" width="6.8%"></a>
 </div>
 <div class="gm">
-  <img src="googles.png" width="70%">
+<a href="https://google.com/" target="_blank"><img src="googles.png" width="70%"></a>
 </div>
 <div class="uu">
-  <img src="youtube.png" width="78%" height="70%">
+<a href="https://youtube.com/@EnvisionISGroup?si=0QoWVzg9Ng8Tlysz" target="_blank"><img src="youtube.png" width="78%" height="70%"></a>
 </div>
 </div>
+
 </body>
-
-
