--- a/digitalfacilitysolutions.html
+++ b/digitalfacilitysolutions.html
@@ -76,17 +76,43 @@
     </div>
     </div>
     <div class="container1">
-        <div class="image8">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture56.PNG" width="1902.5px" height="919px"></div>
-        <div class="hpost1"><h1>DIGITAL FACILITY SOLUTIONS</h1></div>
-        <div class="parapos3">
-        <p>2D layout has traditionally been the easiest method for factory design. But restricting<br> oneself to 2D carries a lot of risks.<br> 
+        <pre><div class="hpost1"><h1>DIGITAL FACILITY SOLUTIONS</h1></div></pre>
+        <pre><div class="parapos3">
+        <p>2D layout has traditionally been the easiest method for factory design. But restricting<br> oneself to 2D carries a lot of risks.
 For example, collisions due to insufficient headroom are often only discovered<br> during construction. The costs of modifying a design at this stage of a project are at their<br> highest, and the associated delays affect the duration of the entire project.<br> Misunderstandings can easily arise leading to costly design and construction errors.<br>Furthermore, when working in 2D, all views of a design have to be manually drafted, and<br> then individually updated with each design change.<br>With a 3D approach, a single 3D design model is created, from which all the required<br> drawings are automatically generated. This represents a considerable time saving over the<br> life of a typical project, and also avoids the risk of introducing human error while manually<br> drafting individual views</p>
-</div> 
-<div class="image2" style="margin-left:1390px;margin-top:-480px">
+</div></pre> 
+<div class="image2">
     <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
-    <div class="image3" style="margin-left:1250px;margin-top:-40px">
+    <div class="image3">
         <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>   
+</div>
+<div class="container2">
+  <pre><div class="parapos4">
+  <p>Digital Factory refers to the integration of digital technologies and<br> data-driven systems into the manufacturing and production<br> processes. It involves the use of advanced technologies such as<br> Internet of Things (IoT), Artificial Intelligence (AI), robotics,<br> simulation, and data analytics to optimize and improve various<br> aspects of the factory operations. The goal of the digital factory is to<br> enhance efficiency, productivity, flexibility, and quality while reducing<br> costs and lead times.
+  </p></div></pre>
+  <pre><div class="parapos5">
+    <p>Scanning for digitalization, in the context of the manufacturing<br> industry, typically refers to the process of capturing and digitizing<br> physical objects, components, or environments using 3D scanning<br> technologies. These scanners use various methods such as laser,<br> structured light, or photogrammetry to capture precise<br> measurements and create digital representations of physical objects<br> or spaces. The scanned data is then used for various purposes in the<br> digitalization process, including design & engineering, reverse<br> engineering, quality control & inspection, virtual simulation &<br> analysis & digital twin creation.
+    </p>
+  </div></pre>
+  <div class="image4">
+  <img src="Picture61.PNG" width="750px" height="600px"></div>
+</div>
+<div class="container3">
+ <pre><div class="parapos6">
+<p>Scanning for digitalization plays a crucial role in the overall digital transformation of manufacturing<br> processes by capturing accurate physical data and converting it into digital formats.
+</p></div></pre>
+<pre><div class="parapos7">
+  <p>This digital data can then be leveraged for advanced analysis, simulation, and optimization, leading to improved<br> productivity, quality, and agility in the manufacturing industry.<br>
+ Digital facility solutions use data analytics techniques to analyse collected data and extract actionable insights from it.<br> Machine learning models and advanced analytics algorithms can identify patterns, detect anomalies, and predict<br> maintenance needs. Equipment uptime can be optimized, unplanned downtime can be reduced, and mechanical<br> systems can be extended for a longer period of time with predictive maintenance
+    </p>
+</div></pre>
+</div>
+<div class="container4">
+  <div class="parapos8">
+  <p>In order to reduce operating costs and improve energy efficiency, digital facility solutions concentrate on energy<br> management and optimization. Energy consumption patterns are monitored and analyzed, energy waste is identified, and<br> recommendations are provided for energy reduction. In order to minimize energy consumption while maintaining occupant<br> comfort, HVAC systems, lighting controls, and equipment scheduling can be optimized.<br>
+   <br> Digital facility solutions provide remote monitoring and control of mechanical systems within a facility. Facility managers<br> can access real-time data, monitor performance, and control equipment remotely through centralized dashboards or<br> mobile applications. By doing so, proactive decisions can be made, issues can be quickly resolved, and troubleshooting can<br> be done remotely. Asset and Inventory Management: Digital facility solutions help you manage assets and inventory. They<br> can track equipment usage, monitor maintenance schedules, and manage spare parts and inventory levels. As a result,<br> operations are streamlined, asset utilization is improved, and equipment failures are reduced.<br>
+   <br> Digital facility solutions include tools for optimizing facilities and managing spaces. Insights into space utilization, occupant<br> behaviour, and facility workflows can be gained from these tools. By using this information, facility managers can optimize<br> space allocation, boost workplace efficiency, and plan for future expansion. To provide a holistic view of facility operations,<br> digital facility solutions integrate with existing building management systems (BMS). HVAC, lighting, access control, and<br> security systems can all be controlled, monitored, and reported by this integration.
+    </p></div>
 </div>
     <div class="container9" style="margin-top:113px">
       <div class="Circle1" style="margin-left:1.7vw;padding-top:18.55vh">
