--- a/engineeringdesignsolutions.html
+++ b/engineeringdesignsolutions.html
@@ -75,27 +75,23 @@
         </div>
     </div>
     </div>
-   <div class="container1" style="height:87.7vh;
-   background-color:green;margin-top:113px;">
-   <div class="image1">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture50.PNG" width="1902.5px" height="806px">
-  </div>
-  <div class="hpos1" style="margin-left:30px;margin-top:-790px;color:black">
+   <div class="container1">
+  <pre><div class="hpos1">
    <h1>ENGINEERING DESIGN SOLUTIONS
    </h1>
-</div>
-<div class="ppos1" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:20px">
-<p>As part of engineering design services, a range of activities are involved in developing and<br>designing mechanical systems, components, and products that are innovative and efficient. Envision<br> specializes in BIW (Body-in-White) fixture design, providing high-quality solutions for the automotive<br> industry.</p></div>
-<div class="image2" style="margin-left:1390px;margin-top:-140px">
-<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="500px" height="300px"></div>
-<div class="ppos2" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-140px">
-<p>Our expertise in fixture design ensures precise and efficient assembly processes for vehicle body structures.<br> An engineer's engineering design services begin with conceptualization and ideation, during which he or<br> she works closely with clients to understand their needs, goals, and constraints. Considering factors such as<br> functionality, performance, aesthetics, safety, and cost, they brainstorm and generate design ideas. 
-</p> </div> 
-<div class="image3" style="margin-left:1250px;margin-top:-30px">
-  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="500px" height="300px"></div>
-<div class="ppos3" style="font-size:25px;line-height:40px;margin-left:30px;margin-top:-250px">
-<p>Utilizing cutting-edge software tools, we create accurate 3D models of BIW fixtures. These models allow us<br> to simulate and validate the assembly process, ensuring that the fixtures meet the desired<br> specifications and are capable of handling the anticipated loads and forces. Engineering design services<br> often involve simulation and analysis to assess the performance and behavior of the design under various<br> conditions. Stress, heat transfer, fluid dynamics, and structural integrity are simulated and analyzed using<br> specialized software. This helps identify potential issues, optimize the design, and ensure it meets the<br> desired specifications and standards.
-</p></div>
+</div></pre>
+<pre><div class="ppos1">
+<p>As part of engineering design services, a range of activities are involved in developing and<br>designing mechanical systems, components, and products that are innovative and efficient. Envision<br>specializes in BIW (Body-in-White) fixture design, providing high-quality solutions for the automotive<br>industry.</p></div></pre>
+<div class="image2">
+<img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture51.PNG" width="400px" height="280px"></div>
+<pre><div class="ppos2">
+<p>Our expertise in fixture design ensures precise and efficient assembly processes for vehicle body structures.<br>An engineer's engineering design services begin with conceptualization and ideation, during which he or<br>she works closely with clients to understand their needs, goals, and constraints. Considering factors such as<br>functionality, performance, aesthetics, safety, and cost, they brainstorm and generate design ideas. 
+</p> </div></pre> 
+<div class="image3">
+  <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture52.PNG" width="400px" height="280px"></div>
+<pre><div class="ppos3">
+<p>Utilizing cutting-edge software tools, we create accurate 3D models of BIW fixtures. These models allow us<br>to simulate and validate the assembly process, ensuring that the fixtures meet the desired<br>specifications and are capable of handling the anticipated loads and forces. Engineering design services<br>often involve simulation and analysis to assess the performance and behavior of the design under various<br>conditions. Stress, heat transfer, fluid dynamics, and structural integrity are simulated and analyzed using<br>specialized software. This helps identify potential issues, optimize the design, and ensure it meets the<br>desired specifications and standards.
+</p></div></pre>
 </div>
 <div class="container2">
   <div class="image2">
