--- a/readmore.html
+++ b/readmore.html
@@ -8,6 +8,8 @@
     <link href='https://unpkg.com/css.gg@2.0.0/icons/css/home.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+ 
   </head>
 <body>
     <div  class="divstyle">
@@ -79,77 +81,72 @@
     
 
 <div class="container3" style="margin-top:110px">
-  <div class="image1">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture42.PNG" width="1903px" height="810.5px">
-  </div> 
   <pre><div class="bpos1">
 <b>Mechanical Services
 </b></div></pre>
 <pre><div class="ppos18"><p>The future of Mechanical Engineering starts here.
 </p></div></pre>
-<div class="Circle-1" style="margin-left:-27.4vw;padding-top:5vh">
-  <div id="circle" style="width: 22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.1vw;border-style:solid;border-color:black; background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));"></div></div>
-  <div style="margin-top:14vh;margin-left:-15vw;font-size:10vw;color:black"><p>E</p></div>
-  <div class="Circle-2" style="margin-left:-13.2vw;padding-top:40.7vh">
-      <div id="circle" style="width:22vw;height:44vh;-webkit-border-radius:22vw;-moz-border-radius:22vw;border-radius:22vw;border-width:0.1vw;border-style:solid;border-color:black; background-image: linear-gradient(to bottom, rgba(248, 189, 29, 0.904) , rgb(0, 255, 221));"></div></div>
-      <div style="margin-top:50vh;margin-left:-15vw;font-size:10vw;color:black"><p>G</p></div>     
-
+<div class="circle"><p class="let">E</p></div>
+    <div class="circle2"><p class="lets">G</p></div>
     </div>
 
-</div>
 
 
-</div>
 
-<div class="container4" style="height:11.8vh">
- 
-  <div class="image2" style="padding-top:0.9px">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture44.PNG" width="1905.5px" height="108.5px">
-  </div> 
-<div class="hpos11" style="margin-left:80px;margin-top:-110px;color:yellow;font-size:40px">
+
+
+<div class="container4">
+<div class="hpos11">
 <h1>Services >></h1></div>
 
 </div>
 
-<div class="container5" style="height:74.5vh">
-  <div class="image3">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture43.PNG" width="1903px" height="685px">
-  </div> 
+<div class="container5">
   
-    <div class="image4" style=" margin-left:600px;margin-top:-550px">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture45.PNG" width="700px" height="400px"></div>
-    <div class="hrow" style="border: 10px solid red;z-index:-2;">
-    <hr>
-    </div>
-    <div class="image5" style="margin-left:609.5px;margin-top:-415px">
-    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture46.PNG" width="340px" height="188px"></div>
-    <div class="image6" style="margin-left:950px;margin-top:-192px">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture47.PNG" width="340px" height="188px"></div>
-      <div class="image5" style="margin-left:609.5px;margin-top:-3.5px">
-        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture48.PNG" width="340px" height="188px"></div>
-        <div class="image5" style="margin-left:950px;margin-top:-193px">
-          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture49.PNG" width="340px" height="188px"></div>
-          <pre><div class="apos1" style="color:white;
-            margin-left:30px;margin-top:-400px;font-size:30px"><a href="engineeringdesignsolutions.html" style="text-decoration:none;color:white"><b>1. ENGINEERING 
+  
+    <div class="image4">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture45.PNG" width="700px" height="390px"></div>
+   
+    <div class="vl"></div>
+    <div class="image5">
+    <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture46.PNG" width="335px" height="180px"></div>
+    <div class="image6">
+      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture47.PNG" width="335px" height="180px"></div>
+      <div class="hline">
+        <hr width="1903px"></div>
+      <div class="image7">
+        <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture48.PNG" width="335px" height="180px"></div>
+        <div class="image8">
+          <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\EG-Website\Picture49.PNG" width="335px" height="180px"></div>
+          <pre><div class="apos1"><a href="engineeringdesignsolutions.html" style="text-decoration:none;color:white"><b>1. ENGINEERING 
    DESIGN 
    SOLUTIONS
             </b></a></div></pre>
-            <pre><div class="apos2" style="color:white;
-              margin-left:1600px;margin-top:-200px;font-size:30px"><a href="IndustrialAutomationSolutions.html" style="text-decoration:none;color:white"><b>2. INDUSTRIAL 
+            <div class="hline1">
+              <hr width="300px"></div>
+              <div class="oval1"><div class="sym1">&gt;</div></div>
+            <pre><div class="apos2"><a href="IndustrialAutomationSolutions.html" style="text-decoration:none;color:white"><b>2. INDUSTRIAL 
    AUTOMATION 
    SOLUTIONS
 </b></a></div></pre>
-<pre><div class="apos3" style="color:white;
-  margin-left:30px;margin-top:330px;font-size:30px"><a href="digitalfacilitysolutions.html" style="text-decoration:none;color:white"><b>3. DIGITAL 
+<div class="hline2">
+  <hr width="300px"></div>
+  <div class="oval2"><div class="sym2">&lt;</div></div>
+<pre><div class="apos3"><a href="digitalfacilitysolutions.html" style="text-decoration:none;color:white"><b>3. DIGITAL 
    FACILITY
    SOLUTIONS
-</b></a></div></pre>   
-<pre><div class="apos4" style="color:white;
-  margin-left:1600px;margin-top:-110px;font-size:30px"><a href="buildinginformationmodelling.html" style="text-decoration:none;color:white"><b>4. BUILDING 
+</b></a></div></pre> 
+<div class="hline3">
+  <hr width="300px"></div>
+  <div class="oval3"><div class="sym3">&gt;</div></div>  
+<pre><div class="apos4"><a href="buildinginformationmodelling.html" style="text-decoration:none;color:white"><b>4. BUILDING 
    INFORMATION 
    MODELLING
 
-</b></a></div></pre>  
+</b></a></div></pre> 
+<div class="hline4">
+  <hr width="300px"></div>
+  <div class="oval4"><div class="sym4">&lt;</div></div> 
  </div>
 
 
