--- a/road.html
+++ b/road.html
@@ -77,23 +77,30 @@
     </div>
     </div>
     <div class="container">
-      <img src="X:\10_BV03_IT\10_BV03_IT_05_TEAM_COMMON_USE\03_GENERAL\EIS0784-NAVEEN\Envisionis-group\Picture32.PNG" style="width:100%;height:100vh ;">
         <div class="paragraph">
             <div class="para1" >
-      <p>In 2024, we at Envision Group proudly celebrated Eleventh glorious years since<br> our inception. In this time, we’ve come a long way — from a family-run vegetable oil<br>manufacturer to a diversified global business and technology consulting leader.</p>
+      <p>In 2024,</p></div>
+      <div class="para2">
+        <p>we at Envision Group proudly celebrated Eleventh glorious years since</p>
+      </div>
+      
+      <div class="para3">
+        <p>our inception. In this time, we have come a long way from a family-run vegetable oil<br>manufacturer to a diversified global business and technology consulting leader.</p>
     </div>
-    <div class="para2">
+    <div class="para4">
         <p>Today, the EG brand is an embodiment of customer-centric excellence, drive for<br> sustainability and outstanding corporate citizenship. Our innovative solutions,<br> lasting partnerships and commitment to our communities have helped us become<br> one of the largest, most trusted IT services companies in the world, with more than<br> 300 employees in over 4 countries. And our lasting values, the Spirit of EG, continue<br> to guide our actions, fuel our passion for customers and drive positive change in our<br> world.</p>
     </div>
-    <div class="para3">
+    <div class="para5">
         <p>Thank you to all the customers, partners, employees, and well-wishers who have<br> made the past Eleventh years of growth and success possible. We look forward to<br> many years of building a more resilient future together with you.
         </p>
     </div>
-</div>
-<div class="circle"><p class="let">E</p></div>
+    <div class="circle"><p class="let">E</p></div>
 <div class="circle2"><p class="lets">G</p></div>
 
+
+    </div>
 </div>
+
 <div class="container2">
   <div class="bwpara">
 <div class="rdpara">
